# banking-management-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backup/: accounts_backup.txt  transactions_backup.txt
data/: accounts.txt  transactions.txt
docs/: design.md  requirements.md
include/: Account.h  Bank.h  DashboardSummary.h  Exceptions.h  MainWindow.h  Transaction.h
reports/: accounts_report.csv  accounts_report.txt  transactions_report.csv  transactions_report.txt
scripts/: create_project_structure.bat  create_project_structure.sh
src/: Account.cpp  Bank.cpp  MainWindow.cpp  Transaction.cpp  console_demo.cpp  main.cpp
tests/: test_bank.cpp
